--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -412,7 +412,7 @@
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "\n",
     "import os\n",
-    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCLF4nyvonPicNgzROQFJLDLvDxI5kDyv0\"\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = \"************************\"\n",
     "\n",
     "llm = ChatGoogleGenerativeAI(\n",
     "    model=\"gemini-2.0-flash\",\n",
